Changes from jTDS 0.9-rc2
=========================

09/23/2004 - Alin Sinpalean
 o Applied Mike's patch [1030475] Scrollable/Updateable result sets for Sybase.

09/23/2004 - Alin Sinpalean
 o Changed the default TDS version to 8.0 when connecting to SQL Server.
 o Corrected bug [1032278] metadata.getColumnClassName not match
   resultset.getObject. Also improved handling of LOB columns in updateable
   ResultSets: until now, updateObject with a LOB value caused the whole
   content to be cached into memory.
 o getObject() (both in JtdsResultSet and JtdsCallableStatement) returned
   UniqueIdentifier objects for UNIQUEIDENTIFIER columns. Fixed.
 o Modified some TdsCore.executeSQL() calls to send -1 for maxRows (in order to
   avoid unnecessary SET ROWCOUNT queries).
 o JtdsDataSource uses the default values from DefaultProperties instead of
   duplicating the initialization. Also, for easier handling, all values are
   kept internally as Strings.

09/16/2004 - Alin Sinpalean
 o Applied Mike's patch [1028856] Sybase 12 support. Added a Tds5Test class.
 o Cleaned up some minor things in tests.
 o Added a test for bug [1028881] statement.execute() causes wrong ResultSet
   type. Seems like it works, after all.
 o Corrected a bug that was causing no exception to be thrown when an invalid
   call escape syntax ("{call ?=...") was used.
 o Cleaned up some warnings signalled by my IDE again.

09/13/2004 - Alin Sinpalean
 o Corrected bug [1027304] DatabaseMetaData.getSchemas() returns 1 column (need
   2); for JDBC 3.0 getSchemas() now also returns a NULL TABLE_CATALOG column.
 o Added a simple test case for bug [1010660] 0.9-rc1 setMaxRows causes
   unlimited temp stored procedures, but was unable to reproduce the behavior.
   The test is PreparedStatementTest.testMaxRows().

09/12/2004 - Alin Sinpalean
 o Implemented automatic TDS protocol version fallback, according to feature
   request [991689] jTDS should automatically detect TDS protocol. Should work